Start/Stop commands do not work properly on MacOs #165 (#166)